# trend-lab-skillforge-ai-skill-starter-260628

./: README.md  pyproject.toml
src/skillforge_ai_skill_starter/: main.py
