[project]
name = "skillforge-ai-skill-starter"
version = "0.1.0"
description = "An open-source starter kit + linter + gallery for the new wave of LLM “skills,” helping creators turn prompts, workflows, and templates into polished, shareable GitHub repos in minutes."
requires-python = ">=3.11"

[project.scripts]
skillforge-ai-skill-starter = "skillforge_ai_skill_starter.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
